--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -39,8 +39,8 @@
       "outputs": [],
       "source": [
         "#read the train and test data\n",
-        "Train_data = pd.read_csv('/content/drive/MyDrive/archive/fashion-mnist_train.csv')\n",
-        "Test_data = pd.read_csv('/content/drive/MyDrive/archive/fashion-mnist_test.csv')\n",
+        "Train_data = pd.read_csv('Path of train.csv')\n",
+        "Test_data = pd.read_csv('Path of test.csv')\n",
         "\n",
         "#seprate images and the Labels\n",
         "Train_images = Train_data.drop('label', axis=1).values / 255.0\n",
